# Dezh

./: .dockerignore  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.review  LICENSE  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_proposal.yml  security_boundary_review.yml
.github/workflows/: ci.yml  release.yml
dezh-boot/: BENCH.md  Cargo.toml  README.md  build.rs  linker.ld
dezh-boot-x86/: Cargo.toml  linker.ld
dezh-boot-x86/.cargo/: config.toml
dezh-boot-x86/src/: main.rs
dezh-boot/.cargo/: config.toml
dezh-boot/bench/: linux_syscall_bench.c
dezh-boot/bench-app/: Cargo.toml  linker.ld
dezh-boot/bench-app/src/: main.rs
dezh-boot/calc-app/: Cargo.toml
dezh-boot/calc-app/src/: main.rs
dezh-boot/lab-app/: Cargo.toml
dezh-boot/lab-app/src/: main.rs
dezh-boot/linux-guest/: Cargo.toml  linker.ld
dezh-boot/linux-guest/.cargo/: config.toml
dezh-boot/linux-guest/src/: main.rs
dezh-boot/marz/: Cargo.toml
dezh-boot/marz/src/: main.rs
dezh-boot/note-app/: Cargo.toml
dezh-boot/note-app/src/: main.rs
dezh-boot/scripts/: console-test.ps1
dezh-boot/src/: blk.rs  ir.rs  main.rs  pkg.rs
dezh-boot/userprog/: Cargo.toml  linker.ld
dezh-boot/userprog/src/: main.rs
dezh-boot/vault-app/: Cargo.toml
dezh-boot/vault-app/src/: main.rs
dezh-boot/virtio-blk/: Cargo.toml  linker.ld
dezh-boot/virtio-blk/src/: main.rs
dezh-cairn/: Cargo.toml  README.md
dezh-cairn/src/: lib.rs
dezh-core/: Cargo.toml
dezh-core/src/: b64.rs  difc.rs  dzp.rs  ir.rs  lib.rs  ocap.rs  sig.rs
dezh-host/: Cargo.toml  build.rs
dezh-host/src/: lib.rs  main.rs
dezh-host/tests/: capability_tests.rs
dezh-identity/: Cargo.toml  README.md
dezh-identity/src/: lib.rs
dezh-ipc/: Cargo.toml  README.md
dezh-ipc/src/: lib.rs
dezh-ir/: Cargo.toml  README.md
dezh-ir/src/: lib.rs
dezh-kernel/: Cargo.toml  README.md
dezh-kernel/src/: lib.rs
dezh-linux/: Cargo.toml  README.md
dezh-linux/src/: lib.rs
dezh-runtime/: Cargo.toml  README.md
dezh-runtime/src/: lib.rs
dezh-scheduler/: Cargo.toml  README.md
dezh-scheduler/src/: lib.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BUILD_AND_RUN.md  DECISIONS.md  DEMO_SCRIPT.md  FAQ.md  GETTING_STARTED.md  GITHUB_PROFILE.md  GIT_WORKFLOW.md  INDEX.md  MARZ.md  OUTREACH.md  OVERVIEW.md  PACKAGES_AND_RELEASES.md  PACKAGE_SIGNING.md  QUICKSTART_VM.md  RELATED_WORK.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  REPO_STRUCTURE.md  REVIEWER_GUIDE.md  ROADMAP.md  SDK_GUIDE.md  SECURITY_MODEL.md  STATUS.md  STRATEGIC_DIRECTION.md  THREAT_MODEL.md  WHITEPAPER.md  demo-transcript-agent-f1.md  demo-transcript-overnight.md  demo-transcript-riscv64.md
guests/: Cargo.toml
guests/g_attenuate/: Cargo.toml
guests/g_attenuate/src/: lib.rs
guests/g_denied/: Cargo.toml
guests/g_denied/src/: lib.rs
guests/g_granted/: Cargo.toml
guests/g_granted/src/: lib.rs
tools/ci/: qemu_smoke.py  sdk_test.py
tools/demo/: run_agent_demo.py  run_review_demo.py
tools/review/: build_release_artifacts.py  make_review_package.py  run_full_review.py  scan_public.py
tools/sdk/: build_pkg.py  dzas.py  install_pkg.py
tools/sdk/templates/agent/: agent.dzs  app.toml
tools/sdk/templates/hello/: app.toml  hello.dzs
tools/x86/: build-iso.sh  grub.cfg
