[package]
name = "dezh-boot-x86"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dezh-boot-x86"
path = "src/main.rs"

[dependencies]
dezh-core = { path = "../dezh-core" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"

# Standalone (own target/linker); not part of the RISC-V workspace.
[workspace]
