# dezh-boot — the actual bare-metal kernel binary (Step 10).
#
# Standalone workspace, EXCLUDED from the root workspace, because it targets
# riscv64gc-unknown-none-elf (no_std, no host linker) rather than the host.
# It boots on QEMU `virt` and prints the validated dezh-kernel boot contract.
[package]
name = "dezh-boot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dezh-kernel = { path = "../dezh-kernel" }
dezh-core = { path = "../dezh-core" }

# Host-side only: build.rs signs a demo package with the audited Ed25519 crate
# (deterministic, fixed seed) and embeds the signed envelope for the sig-demo.
# default-features off: signing uses from_seed + sign (deterministic, no RNG),
# so we avoid pulling getrandom and its wasm/wit dependency tree into the lock.
[build-dependencies]
dezh-core = { path = "../dezh-core" }
ed25519-compact = { version = "2", default-features = false }

[[bin]]
name = "dezh-boot"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace]
